# VendorBridge

./: .env.example  .gitignore  PLANNING.md  README.md  TASK.md  docker-compose.yml  readme.md
apps/api/: pyproject.toml
apps/api/app/: __init__.py  main.py  notifications.py  notifications_routes.py  seed.py
apps/api/app/activity/: __init__.py  routes.py  schemas.py  service.py
apps/api/app/approvals/: __init__.py  routes.py  schemas.py  service.py
apps/api/app/auth/: routes.py  schemas.py  service.py
apps/api/app/common/: __init__.py  dependencies.py  enums.py  procurement.py  validators.py
apps/api/app/core/: config.py  rate_limit.py  security.py
apps/api/app/db/: optimizations.py  session.py
apps/api/app/invoices/: routes.py  schemas.py  service.py
apps/api/app/models/: entities.py
apps/api/app/purchase_orders/: __init__.py  routes.py  schemas.py  service.py
apps/api/app/quotations/: __init__.py  routes.py  schemas.py  service.py
apps/api/app/reports/: __init__.py  routes.py
apps/api/app/rfqs/: __init__.py  contracts.py  routes.py  schemas.py  service.py
apps/api/app/vendors/: __init__.py  routes.py  schemas.py  service.py  validators.py
apps/api/migrations/: env.py
apps/api/migrations/versions/: 0001_initial_schema.py  0002_postgres_optimizations.py
apps/api/tests/: __init__.py  conftest.py  test_activity_ledger.py  test_auth_and_vendors.py  test_db_optimizations.py  test_golden_path.py  test_rfq_contracts.py  test_validators.py
docs/: ANALYSIS.md  arena-proposal.md  codex-vendorbridge-winning-proposal.md  team-idea.html  (+1 more)
(+28 files in other folders)
