[project]
name = "vendorbridge-api"
version = "0.1.0"
description = "VendorBridge FastAPI backend"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.13.2",
  "bcrypt<4.1",
  "email-validator>=2.2.0",
  "fastapi>=0.115.0",
  "passlib[bcrypt]>=1.7.4",
  "psycopg[binary]>=3.2.1",
  "pydantic-settings>=2.4.0",
  "pyjwt>=2.9.0",
  "python-multipart>=0.0.9",
  "redis>=5.0.8",
  "sqlalchemy>=2.0.32",
  "uvicorn[standard]>=0.30.6"
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27.2",
  "pytest>=8.3.2",
  "ruff>=0.6.3"
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.setuptools.packages.find]
include = ["app*"]
